# jf

./: Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: commands.rs  config.rs  error.rs  http.rs  lib.rs  main.rs  utils.rs
tests/: cli.rs
