[package]
name = "jinafetch"
version = "0.1.0"
edition = "2024"
description = "Fetch any webpage as clean Markdown via jina.ai Reader"
license = "MIT"
authors = ["Leo"]

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
anyhow = "1"
colored = "3"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
