[package]
name = "jf"
version = "0.2.0"
edition = "2024"
description = "Fetch any webpage as clean Markdown via jina.ai Reader - ultra-fast CLI"
license = "MIT"
authors = ["Leo"]
repository = "https://github.com/lsj5031/jf"
readme = "README.md"
keywords = ["cli", "web", "markdown", "jina", "fetch"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time"] }
anyhow = "1"
colored = "3"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.6"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
